# docs/swagger.json
@@ -14,7 +14,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Auth"
+                    "User Login"
                 ],
                 "summary": "User Login",
                 "parameters": [
@@ -63,9 +63,47 @@
                     "Payments"
                 ],
                 "summary": "Purchase Premium",
+                "parameters": [
+                    {
+                        "description": "User ID",
+                        "name": "userID",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "Purchase type (remove_quota or add_verified)",
+                        "name": "purchaseType",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -86,7 +124,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Sign Up User"
                 ],
                 "summary": "Signup a new user",
                 "parameters": [
@@ -132,12 +170,59 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Actions"
+                    "Swipe Action"
                 ],
                 "summary": "Swipe action",
+                "parameters": [
+                    {
+                        "description": "User ID",
+                        "name": "userID",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "Target User ID",
+                        "name": "targetID",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "Swipe action (left or right)",
+                        "name": "action",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
